fix spacing main-footer

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ header {
 
 /* Main */
 main {
-  padding: 15px 25px;
+  padding: 15px 35px;
+  padding-bottom: 0;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
 }
